--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "format": "prettier .  --write"
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
   "dependencies": {
     "vue": "3.2.47"
@@ -19,5 +18,12 @@
     "eslint-plugin-vue": "9.10.0",
     "prettier": "2.8.7",
     "vite": "4.2.1"
+  },
+  "prettier": {
+    "vueIndentScriptAndStyle": true,
+    "singleQuote": true,
+    "semi": true,
+    "tabWidth": 2,
+    "trailingComma": "es5"
   }
 }
