added state manager pinia

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
   "dependencies": {
+    "pinia": "2.0.33",
     "vue": "3.2.47"
   },
   "devDependencies": {
