--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "singleQuote": true,
     "semi": true,
     "tabWidth": 2,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "printWidth": 150
   }
 }
